--- a/main.css
+++ b/main.css
@@ -1,8 +1,19 @@
 #product-overview {
-  background: url("freedom.jpg");
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box,
+    #ff1b68;
+  /* background-size: cover; */
+  /* background-position: left 10% bottom 20%; */
+  /* background-repeat: no-repeat; */
+  /* background-origin: border-box; */
+  /* background-clip: border-box; */
+  /* background-image: radial-gradient(red, blue); */
   width: 100%;
   height: 528px;
   padding: 10px;
+  position: relative;
+  /* border: 5px dashed red; */
+  margin-top: 43.5px;
 }
 
 .section-title {
@@ -13,6 +24,9 @@
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plan__list {
@@ -102,6 +116,7 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
+  padding: 20px;
 }
 
 .key-feature__description {
