--- a/packages/packages.css
+++ b/packages/packages.css
@@ -6,7 +6,7 @@ main {
   background: url("../images/plans-background.jpg") center/cover;
   filter: grayscale(40%);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   z-index: -1;
 }
