--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: "AnonymousPro";
+  src: url("anonymousPro-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "AnonymousPro";
+  src: url("anonymousPro-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
 main {
   padding-top: 2rem;
 }
@@ -50,9 +61,12 @@ main {
 .package__info {
   padding: 1rem;
   border: 1px solid #0e4f1f;
-  font-size: 1.2rem;
   color: #0e4f1f;
   background: white;
+  /* font-size: 1.2rem; */
+  /* font-family: "AnonymousPro", sans-serif; */
+  /* font-weight: 700; */
+  font-size: 1.2rem;
 }
 
 .clearfix {
