--- a/shared.css
+++ b/shared.css
@@ -13,14 +13,20 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  height: 100%;
-  display: grid;
-  grid-template-rows: 3.5rem auto fit-content(8rem);
-  grid-template-areas:
-    "header"
-    "main"
-    "footer";
-  /* padding-top: 3.5rem; */
+  padding-top: 3.5rem;
+}
+
+@supports (display: grid) {
+  body {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 3.5rem auto fit-content(8rem);
+    grid-template-areas:
+      "header"
+      "main"
+      "footer";
+    padding-top: 3.5rem;
+  }
 }
 
 main {
@@ -46,6 +52,9 @@ main {
   background: #2ddf5c;
   padding: 0.5rem 1rem;
   z-index: 60;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   align-items: center;
   justify-content: space-between;
